--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - _T6",
+            "request": "launch",
+            "mainClass": "_T6",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - _T5",
+            "request": "launch",
+            "mainClass": "_T5",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - _T4",
+            "request": "launch",
+            "mainClass": "_T4",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - _T3",
             "request": "launch",
             "mainClass": "_T3",
