--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,26 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - Test_singleclass",
+            "request": "launch",
+            "mainClass": "Test_singleclass"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - singleclass2",
+            "request": "launch",
+            "mainClass": "singleclass2",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - singleclass1",
+            "request": "launch",
+            "mainClass": "singleclass1",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - _T6",
             "request": "launch",
             "mainClass": "_T6",
