--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,17 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - DoubleCheckThreadsafe",
+            "request": "launch",
+            "mainClass": "DoubleCheckThreadsafe",
+            "console": "externalTerminal"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - ThreadLocalTest",
             "request": "launch",
             "mainClass": "ThreadLocalTest",
-            "console": "externalTerminal"
+            "console": "externalTerminal",            
         }
     ]
 }
